--- a/023-CSS-KONUMLANDIRMA-GORUNUM ISLEMLERI/11-opacity-ozelligi.html
+++ b/023-CSS-KONUMLANDIRMA-GORUNUM ISLEMLERI/11-opacity-ozelligi.html
@@ -63,7 +63,7 @@
         <li>initial; html elementi varsayılan biçimlendirme değerine döner</li>
     </ul>
 
-    <h2>Örnek-1 ;</h2>
+    <h3>Örnek ;</h3>
 
     <div class="ornek1"> opacity: 1.0;</div>
     <div class="ornek2"> opacity: 0.8;</div>
