--- a/023-CSS-KONUMLANDIRMA-GORUNUM ISLEMLERI/12-filter-ozelligi.html
+++ b/023-CSS-KONUMLANDIRMA-GORUNUM ISLEMLERI/12-filter-ozelligi.html
@@ -149,62 +149,60 @@
         <li>sepia( ); kahverengi ağırlıklı antik tonlama (%0 ile %100 arası değer alır)</li>
     </ul>
 
-    <h2>Örnek-1 ;</h2>
+    <h3>Örnek-1 ;</h3>
     <p>filter: none;</p>
     <img class="ornek1" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-2 ;</h2>
+    <h3>Örnek-2 ;</h3>
     <p> filter: blur(5px);</p>
     <img class="ornek2" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-3 ;</h2>
+    <h3>Örnek-3 ;</h3>
     <p> filter: brightness(40%);</p>
     <img class="ornek3" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-4 ;</h2>
+    <h3>Örnek-4 ;</h3>
     <p> filter: contrast(40%);</p>
     <img class="ornek4" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-5 ;</h2>
+    <h3>Örnek-5 ;</h3>
     <p> filter: drop-shadow(5px 5px 5px black);</p>
     <img class="ornek5" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-6 ;</h2>
+    <h3></h3>>Örnek-6 ;</h3>
     <p> filter: grayscale(100%);</p>
     <img class="ornek6" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-7 ;</h2>
+    <h3>Örnek-7 ;</h3>
     <p> filter: hue-rotate(180deg);</p>
     <img class="ornek7" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-8 ;</h2>
+    <h3>Örnek-8 ;</h3>
     <p> filter: invert(100%);</p>
     <img class="ornek8" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-9 ;</h2>
+    <h3>Örnek-9 ;</h3>
     <p> filter: opacity(50%);</p>
     <img class="ornek9" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-10 ;</h2>
+    <h3>Örnek-10 ;</h3>
     <p> filter: saturate(30%);</p>
     <img class="ornek10" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-    <h2>Örnek-11 ;</h2>
+    <h3>Örnek-11 ;</h3>
     <p> filter: sepia(80%);</p>
-    <img class="ornek11" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
+    <img class="ornek11" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">   
 
-   
-
-     <h2>Örnek-12 ;</h2>
+     <h3>Örnek-12 ;</h3>
     <p>   filter: invert(100% )blur(2px);</p>
     <img class="ornek12" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
-      <h2>Örnek-13 ;</h2>
+      <h3>Örnek-13 ;</h3>
     <p>   filter: blur(1px) hue-rotate(100deg) sepia(50%);</p>
     <img class="ornek13" src="../img/manzara6.jpg" alt="manzara" title="manzara" width="400" height="200">
 
 
- <h2>Örnek-14 ;</h2>
+ <h3>Örnek-14 ;</h3>
     <div class="ornek14">filter:blur(2px)</div>
     <div class="ornek14a">filter:blur(2px)</div>
 
