--- a/026-CSS-GRID-TANIMLAMALARI/01-grid-tanımlamaları.html
+++ b/026-CSS-GRID-TANIMLAMALARI/01-grid-tanımlamaları.html
@@ -11,11 +11,7 @@
             border: 2px solid blue;
             padding: 10px;
             margin: 10px;
-            display: -webkit-flex;
-            display: -moz-flex;
-            display: -o-flex;
-            display: -ms-flex;
-            display: flex;
+            display: grid;
         }
 
         .iceleman1 {
@@ -23,7 +19,6 @@
             margin: 10px;
             border: 2px solid red;
             color: white;
-
         }
 
         .anaeleman2 {
@@ -31,13 +26,8 @@
             border: 2px solid blue;
             padding: 10px;
             margin: 10px;
-            display: -webkit- inline-flex;
-            display: -moz- inline-flex;
-            display: -o- inline-flex;
-            display: -ms- inline-flex;
-            display: inline-flex;
+            display: inline-grid;
         }
-
 
         .iceleman2 {
             padding: 10px;
@@ -49,31 +39,30 @@
 </head>
 
 <body>
-    <h1>flex (esnek kutu) tanımlamları</h1>
-    <p>Bir elementi veya içerisindeki diğer elementleri esnek yapıya kavuşturmak için kullanılır. İçerisindeki
-        elementleri ama enine ama boyuna olsun sayfaya yaymamıza olanak tanır. Bu yapı sayesinde elementlere istediğimiz
-        gibi hükmedebiliyoruz.</p>
-
-
+    <h1>grid (ızgara) tanımlamları</h1>
 
     <h3>ornek-1 ;</h3>
-    <p> display: flex; Esnek kutu içerisindeki öğeler ana eksen doğrultusunda kutuya sığmak için büyür yada küçülür. Blok düzeylidir.</p>
+    display: grid; (Elementlerin düzeylerini değiştirmez. Element satır düzeyliyse satır, blok düzeyliyse blok olarak
+    kalır. Sadece
+    ızgara yapısı oluşturur.)
     <div class="anaeleman1">
         <div class="iceleman1">HTML</div>
         <div class="iceleman1">CSS</div>
         <div class="iceleman1">JS</div>
+        <div class="iceleman1">C#</div>
         <div class="iceleman1">ASP</div>
     </div>
 
     <h3>ornek-2 ;</h3>
-    <p> display: inline-flex; (İçindeki kutuların kapladığı alandan sonra sonlandırır. Satır düzeylidir.)
-    </p>
+    display: inline-grid;(element satır düzeyli olur)<br>
     <div class="anaeleman2">
         <div class="iceleman2">HTML</div>
         <div class="iceleman2">CSS</div>
         <div class="iceleman2">JS</div>
+        <div class="iceleman2">C#</div>
         <div class="iceleman2">ASP</div>
     </div>
+
 
 </body>
 
